--- a/ExpensesManagment.Web/ExpensesManagment.Web.csproj
+++ b/ExpensesManagment.Web/ExpensesManagment.Web.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\ExpensesManagment.Common\ExpensesManagment.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\Users\" />
+  </ItemGroup>
+
 </Project>
