--- a/ExpensesManagment.Web/appsettings.json
+++ b/ExpensesManagment.Web/appsettings.json
@@ -7,6 +7,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Expenses;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Tokens": {
+    "Key": "Asmsaiqw09457_ERU(/%#$BWEO(bdihweb}%#$8bw128py23ñguwe__jhuibdiwhwn23%%&4b3ui2g78b24o9!",
+    "Issuer": "localhost",
+    "Audience": "users"
+  },
+  "Mail": {
+    "From": "fortunattibernard@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 465,
+    "Password": "Facu123."
   }
 
 }
