--- a/ExpensesManagment.Prism/ExpensesManagment.Prism.Android/ExpensesManagment.Prism.Android.csproj
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism.Android/ExpensesManagment.Prism.Android.csproj
@@ -130,5 +130,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_launcher.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_action_add_location.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
