--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AddTripPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ExpensesMasterDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
