--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="17.4.0.55" />
+    <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.396" />
@@ -18,6 +19,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Views\AddTripPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ExpenseDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ExpensesMasterDetailPage.xaml">
