--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
@@ -36,6 +36,9 @@
     <EmbeddedResource Update="Views\RegisterPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RememberPasswordPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\TripDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
