--- a/ExpensesManagment.Prism/ExpensesManagment.Prism.Android/ExpensesManagment.Prism.Android.csproj
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism.Android/ExpensesManagment.Prism.Android.csproj
@@ -163,5 +163,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Transport.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_add_shopping_cart.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
