--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/ExpensesManagment.Prism.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AddExpensePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AddTripPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
